--- a/poll_app/templates/poll_app/vote.html
+++ b/poll_app/templates/poll_app/vote.html
@@ -11,28 +11,26 @@
                 <div class="card-body bg-light">
                     <div class="row bg-light">
                         <div class="col-md-12">
-                            <h4>{{ poll.question }}</h4>
+                            <h4>{{ poll.question_text }}</h4>
                         </div>
                     </div>
                     <div class="row pb-2">
                         <div class="col-md-12">
                             <br>
-                            <form action="" method="POST">
+                            <!-- error message -->
+                            {% if error_message %}
+                            <p class="text-danger"><strong>{{ error_message }}</strong></p>
+                            {% endif %}                            
+                            <form action="{% url 'poll_app:vote' poll.id %}" method="POST">
                                 {% csrf_token %}
+                                {% for choice in poll.choice_set.all %}
                                 <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="poll" id="option1" value="option1">
-                                    <label class="form-check-label" for="option1">{{ poll.option1 }}</label>
-                                  </div>
-                                  <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="poll" id="option2" value="option2">
-                                    <label class="form-check-label" for="option2">{{ poll.option2 }}</label>
-                                  </div>
-                                  <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="poll" id="option3" value="option3">
-                                    <label class="form-check-label" for="option3">{{ poll.option3 }}</label>
-                                  </div>
-                                  <hr />
-                                  <button type="submit" class="btn btn-primary">Submit</button>
+                                    <input class="form-check-input" type="radio" name="clap" id="choice" value="{{ choice.id }}">
+                                    <label class="form-check-label" for="clap">{{ choice.choice_text }}</label>
+                                </div>
+                                {% endfor %}
+                                <hr />
+                                <button type="submit" class="btn btn-primary">Submit</button>
                             </form>
                         </div>
                     </div>
@@ -41,5 +39,4 @@
         </div>
     </div>
 </div>
-
 {% endblock content %}
