--- a/poll_app/templates/poll_app/base.html
+++ b/poll_app/templates/poll_app/base.html
@@ -11,7 +11,13 @@
     <!-- poll.style.css link -->
     {% load static %}
     <link href="{% static 'poll_app/css/poll_style.css' %}" rel="stylesheet" type="text/css"/>
-    
+    <style>
+      .hello-msg {
+        font-size: 18px;
+        color: blue;
+        margin: 20px;
+      }
+    </style>    
     <title>{% block title %} {% endblock %}</title>
   </head>
   <body>
@@ -20,7 +26,9 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
+        
         <div class="collapse navbar-collapse" id="navbarNav">
+          
           <ul class="navbar-nav">
             <li class="nav-item active">
               <a class="nav-link" href="{% url 'poll_app:home' %}">Home <span class="sr-only">(current)</span></a>
@@ -33,7 +41,22 @@
             <input class="form-control ml-md-5" type="search" placeholder="Search" aria-label="Searchs">
             <button class="btn btn-outline-success ml-md-2" type="submit">Search</button>
           </form>
+          <ul class="navbar-nav flex-row ml-auto">            
+            {% if request.user.is_authenticated %}
+            <h4 class="nav-link mt-1">Hello, <span class="">{{ request.user }}</span></h4>
+            <li>
+              <a class="nav-link" href="{% url 'poll_app:logout' %}"><button class="btn btn-danger">Logout</button></a>
+            </li>
+            {% endif %}
+            <li class="">
+              <a class="nav-link" href="{% url 'poll_app:login' %}"><button class="btn btn-secondary mr-1 mr-md-0 mr-lg-0">Login</button></a>
+            </li>
+            <li class="">
+              <a class="nav-link" href="{% url 'poll_app:register' %}"><button class="btn btn-secondary btn-md">Sign Up</button></a>
+            </li>
+          </ul>
         </div>
+      
       </nav>
         {% block content %}
 
