--- a/poll_app/templates/poll_app/home.html
+++ b/poll_app/templates/poll_app/home.html
@@ -2,6 +2,15 @@
 {% block title %}Home{% endblock %}
 {% block content %}
 <div class="container">
+    {% if messages %}
+        {% for message in messages %}
+            <div class="row justify-content-center mt-1">
+                <div class="col-md-4 alert alert-info text-center mb-0" role="alert">
+                    {{ message }}
+                </div>
+            </div>
+        {% endfor %}
+    {% endif %}
     <div class="row justify-content-center">
         <div class="col-md-8">
             <div class="card">
