--- a/poll_app/templates/poll_app/create.html
+++ b/poll_app/templates/poll_app/create.html
@@ -37,7 +37,7 @@
                                 <div class="form-group">
                                     <!-- <label for="option1">First option</label> -->
                                     <!-- <input type="text" name="option1" id="option1" class="form-control" placeholder="Enter first option"> -->
-                                    <label class="pb-2 pt-2">Enter your choice options here. At least two!</label>
+                                    <label class="pb-2 pt-2 text-muted">Enter your optional answers. At least two!</label>
                                     {{ formset|crispy }}
                                 </div>
                             </div>
