--- a/poll_app/templates/poll_app/base.html
+++ b/poll_app/templates/poll_app/base.html
@@ -37,7 +37,7 @@
               <a class="nav-link" href="{% url 'poll_app:create' %}">Create</a>
             </li>
           </ul>
-          <form class="form-inline" action="{% url 'poll_app:search_results' %}" method="GET">
+          <form class="form-inline" action="{% url 'poll_app:search_results' %}" method="GET"> <!-- Search form -->
             <input class="form-control ml-md-5" name="s" type="search" placeholder="Search for categories..." aria-label="Searchs">
             <button class="btn btn-outline-success ml-md-2" type="submit">Search</button>
           </form>
