--- a/poll_app/templates/poll_app/home.html
+++ b/poll_app/templates/poll_app/home.html
@@ -25,7 +25,7 @@
                                 <div class="col-md-7">
                                     <span><strong>{{ poll.question_text }}</strong></span><br>
                                     <footer class="badge badge-dark d-inline">#{{ poll.category }}</footer>
-                                    <footer class="d-inline mr-2 ml-3"><span class="text-muted">Pub: </span>{{ poll.pupblish_date|date:"M. d, Y, H:i" }}</footer>
+                                    <footer class="d-inline mr-1 ml-1"><span class="text-muted">Pub: </span>{{ poll.pupblish_date|date:"M. d, Y, H:i" }}</footer>
                                     <footer class="d-inline"><span class="text-muted m-0">Author: </span>{{ poll.author.username }}</footer>
                                 </div>
                                 <div class="col-md-5">
@@ -41,13 +41,42 @@
                             </div>
                         </li>
                     </ul>
-                    <hr class="m-0" style="color: red;">
+                    <hr class="m-0">
                 {% endfor %}
-                </div>
-                
+                </div>                
             </div><!-- Card end -->
         </div>
     </div>
+    
+    <nav aria-label="Page navigation" class="fixed-bottom"> <!-- Pagination -->
+        <div class="row justify-content-center">
+            <ul class="pagination">
+                {% if polls.has_previous %}
+                    <li class="page-item">
+                        <a class="page-link" href="?page={{ polls.previous_page_number }}" aria-disabled="true">Previous</a>
+                    </li>
+                {% endif %}
+
+                {% for num in polls.paginator.page_range %}
+                    {% if polls.number == num %} <!-- Current page -->
+                        <li class="page-item active" aria-current="page">
+                            <a class="page-link" href="?page={{ num }}">{{ num }}<span class="sr-only">(current)</span></a>
+                        </li>
+                    {% elif polls.number > num|add:'-3' and polls.number < num|add:'3' %}
+                        <li class="page-item">
+                            <a class="page-link" href="?page={{ num }}">{{ num }}</a>
+                        </li>
+                    {% endif %}
+                {% endfor %}
+    
+                {% if polls.has_next %}
+                    <li class="page-item">
+                        <a class="page-link" href="?page={{ polls.next_page_number }}">Next</a>
+                    </li>
+                {% endif %}
+            </ul>
+        </div>
+    </nav> <!-- Pagination end -->    
 </div>
 
 {% endblock content %}
