--- a/poll_app/templates/poll_app/search_result.html
+++ b/poll_app/templates/poll_app/search_result.html
@@ -28,10 +28,38 @@
                     <hr class="m-0" style="color: red;">
                 {% endfor %}
                 </div>
-                
             </div><!-- Card end -->
+        </div> 
+    </div> <!-- row end -->
+    <nav aria-label="Page navigation" class="fixed-bottom"> <!-- Pagination -->
+        <div class="row justify-content-center">
+            <ul class="pagination">
+                {% if page_obj.has_previous %}
+                    <li class="page-item">
+                        <a class="page-link" href="?page={{ page_obj.previous_page_number }}&s={{ query }}">Previous</a>
+                    </li>
+                {% endif %}
+
+                {% for num in page_obj.paginator.page_range %}
+                    {% if page_obj.number == num %} <!-- Current page -->
+                        <li class="page-item active" aria-current="page">
+                            <a class="page-link" href="?page={{ num }}&s={{ query }}">{{ num }}<span class="sr-only">(current)</span></a>
+                        </li>
+                    {% elif page_obj.number > num|add:'-3' and page_obj.number < num|add:'3' %}
+                        <li class="page-item">
+                            <a class="page-link" href="?page={{ num }}&s={{ query }}">{{ num }}</a>
+                        </li>
+                    {% endif %}
+                {% endfor %}
+    
+                {% if page_obj.has_next %}
+                    <li class="page-item">
+                        <a class="page-link" href="?page={{ page_obj.next_page_number }}&s={{ query }}">Next</a>
+                    </li>
+                {% endif %}
+            </ul>
         </div>
-    </div>
-</div>
+    </nav> <!-- Pagination end -->    
+</div> <!-- container end -->
 
 {% endblock content %}
