--- a/poll_app/templates/poll_app/home.html
+++ b/poll_app/templates/poll_app/home.html
@@ -5,7 +5,7 @@
     {% if messages %}
         {% for message in messages %}
             <div class="row justify-content-center mt-1">
-                <div class="col-md-4 alert alert-info text-center mb-0" role="alert">
+                <div class="col-md-4 alert alert-danger text-center mb-0" role="alert">
                     {{ message }}
                 </div>
             </div>
