--- a/poll_app/static/poll_app/css/poll_style.css
+++ b/poll_app/static/poll_app/css/poll_style.css
@@ -9,8 +9,8 @@ body{
     background-color: rgba(236, 196, 247, 0.7);
     border-color: rgba(245, 245, 220, .6);
     */
-    border-top-left-radius: 2rem;
-    border-top-right-radius: 2rem; 
+    border-top-left-radius: 0.5rem;
+    border-top-right-radius: 0.5rem; 
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
     margin-top: 1rem;
@@ -20,4 +20,24 @@ body{
 .card-header {
     background-color: rgb(68, 85, 109);
     color: white;
+
+}
+
+/* User name in navbar */
+#user_name {
+    color: black;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+#user_name:hover {
+    color: grey;
+}
+
+/* Polio brand in navbar */
+#navbar_brand {
+    font-weight: 600;
+}
+
+/* Delete page */
+#delete_card {
+    border-radius: 0.5rem;
 }
