--- a/poll_app/templates/poll_app/delete.html
+++ b/poll_app/templates/poll_app/delete.html
@@ -4,13 +4,21 @@
 <div class="container-fluid">
     <form action="{% url 'poll_app:delete' poll.id %}" method="POST">
         {% csrf_token %}
-        <div class="row justify-content-center mt-4">
-            <div class="col-md-10 text-center">
-                <h4 class="">Are you sure you want to delete the poll("{{ poll.question_text }}")?</h4>
-            </div>
-            <div class="col-md-2">
-                <a class="btn btn-info" href="{% url 'poll_app:home' %}">No</a>
-                <button type="submit" class="btn btn-danger">Yes</button>
+        <div class="row justify-content-center mt-5">
+            <div class="card col-md-6" id="delete_card">
+                <div class="card-body">
+                    <div class="row">
+                        <h4>Are you sure you want to delete the poll?</h4>
+                    </div>
+                    <div class="row">
+                        <h5>"{{ poll.question_text }}"</h5>
+                    </div>
+                    <hr />
+                    <div class="row justify-content-center">
+                        <button type="submit" class="btn btn-danger mr-2">Yes</button>
+                        <a class="btn btn-info" href="{% url 'poll_app:home' %}">No</a>
+                    </div>
+                </div>
             </div>
         </div>
     </form>
