--- a/poll_app/templates/poll_app/edit.html
+++ b/poll_app/templates/poll_app/edit.html
@@ -51,9 +51,9 @@
                                 </div>
                             </div>
                         </div>
+                        <hr class="mt-0"/>
                         <!-- Submit button -->
                         <div class="row">
-                            <hr />
                             <div class="col-md-12">
                                 <button type="submit" class="btn btn-info">Submit</button>
                             </div>
